<resources>
    <string name="app_name">UberApp</string>

    <!-- region Login screen -->
    <string name="email_field_hint">E-mail</string>
    <string name="password_field_hint">Password</string>
    <string name="radio_button_rider">Rider</string>
    <string name="radio_button_driver">Driver</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <!-- endregion Login screen -->
    <!-- region Register screen -->
    <string name="first_name_field_hint">First name</string>
    <string name="last_name_field_hint">Last name</string>
    <string name="username_field_hint">Username</string>
    <string name="confirm_password_field_hint">Confirm Password</string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="cancel_button">Cancel</string>
    <string name="phone_field_hint">Phone number</string>
    <!-- endregion Register screen -->

    <!-- region Driver main screen generated string -->
    <string name="title_activity_driver_main_screen">Driver</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_driver_main_map">Map</string>
    <!-- endregion Driver main screen generated string -->

    <!-- region Ride request strings -->
    <string name="request_username">Username</string>
    <string name="request_distance">XXkm away</string>
    <string name="request_offer">Offer: $XXX</string>
    <string name="request_accept">Accept</string>
    <string name="request_first_name">Firstname</string>
    <string name="request_last_name">Lastname</string>
    <string name="request_start_dest">Start Destination</string>
    <string name="request_end_dest">End Destination</string>
    <!-- endregion Ride request strings -->

    <!-- region Message passing strings -->
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <!-- endregion Message passing strings -->

    <!-- region Rating Strings -->
    <string name="ratingfrag_title">Rate Your Ride:</string>
    <string name="ratingfrag_driver_subheader">With:</string>
    <string name="ratingfrag_tripsummary_subheader">From:</string>
    <string name="ratingfrag_tripsummary_template">STARTLOC to ENDLOC</string>
    <string name="ratingfrag_rateup_description">Thumbs Up</string>
    <string name="ratingfrag_ratedown_description">Thumbs Down</string>
    <!-- endregion Rating Strings -->

</resources>
