<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".activities.RegisterActivityRider">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_uberapp" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="411dp"
        android:layout_height="507dp"
        android:paddingTop="10dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/first_name_field_hint"
                android:inputType="textPersonName"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/last_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/last_name_field_hint"
                android:inputType="textPersonName"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/email_field_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/username_field_hint"
                android:inputType="textPersonName"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/phone_field_hint"
                android:inputType="phone"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/password_field_hint"
                android:inputType="textPassword"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/confirm_password_field_hint"
                android:inputType="textPassword"
                android:paddingTop="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="100px"
                android:layout_marginLeft="100px"
                android:layout_marginTop="50px"
                android:orientation="horizontal"
                android:paddingBottom="500px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView4">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="50px"
                    android:onClick="onRegisterPress"
                    android:text="@string/register_button" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCancelPress"
                    android:text="@string/cancel_button" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>