<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/framelayout_bordered">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <TextView
            android:id="@+id/ratingFragmentHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ratingfrag_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="?attr/listViewDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/include"
            layout="@layout/search_profile_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingFragmentDriverSubheader" />

        <TextView
            android:id="@+id/ratingFragmentDriverSubheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ratingfrag_driver_subheader"
            android:textColor="?attr/listViewDivider"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/ratingFragmentHeader" />

        <ImageView
            android:id="@+id/rateUpButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/ratingfrag_rateup_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rateDownButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

        <ImageView
            android:id="@+id/rateDownButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/ratingfrag_ratedown_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rateUpButton"
            app:layout_constraintTop_toTopOf="@+id/rateUpButton"
            app:srcCompat="@drawable/ic_thumb_down_black_24dp" />

        <ImageView
            android:id="@+id/ratingFragmentCloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_dialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>